# xai-hackathon

./: .gitignore  README.md  pyproject.toml
data/: Keanu Reeves 12 ObjectivePersonality.txt  Keanu Reeves 22 ObjectivePersonality.txt  alok-singh.txt  arthur-brooks.txt  elon-musk.txt  gabor-mate.txt  keanu-reeves.txt  peterson.txt  robin-williams.txt
info/: Animals.md  Functions.md  Human Needs.md  Sexuals.md  Socials.md  ebook.md  elimination-tool.md  terms-clean.md  terms.md
src/xai_hackathon/: __init__.py  markdown_token_counter.py
